--- a/movies.html
+++ b/movies.html
@@ -57,95 +57,119 @@
 
     </script>
     <div class="list">
-        <div class="list__title"><img src="images/movies/django_unchained.jpg" alt="Django Unchained">
-            <div class="list__title__rating">76%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">Django Unchained</div>
-                Year: 2012<br>
-                Director: Quentin Tarantino
-                <br>Actors: Jamie Foxx...
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">76%</div>
+                    <img src="images/movies/django_unchained.jpg" alt="Django Unchained">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">Django Unchained</div>
+                    Year: 2012<br>
+                    Director: Quentin Tarantino<br>
+                    Actors: Jamie Foxx...
+                </div>
             </div>
-        </div>
-        <div class="list__title"><img src="images/movies/interstellar.webp" alt="Interstellar">
-            <div class="list__title__rating">90%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">Interstellar</div>
-                Year: 2014<br>
-                Director: Christopher Nolan<br>
-                Actors: Anne Hathaway...
-            </div>
-        </div>
-        <div class="list__title"><img src="images/movies/john_wick.jpg" alt="John Wick">
-            <div class="list__title__rating">99%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">John Wick</div>
-                Year: 2014<br>
-                Director: Chad Stahelski<br>
-                Actors: Keanu Reeves...
-            </div>
-        </div>
-        <div class="list__title"><img src="images/movies/oppenheimer.jpg" alt="Oppenheimer">
-            <div class="list__title__rating">84%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">Openheimer</div>
-                Year: 2023<br>
-                Director: Christopher
-                Nolan<br>
-                Actors: Cillian Murphy...
-            </div>
-        </div>
-        <div class="list__title">
-            <img src="images/movies/el_camino.jpg" alt="El Camino">
-            <div class="list__title__rating">82%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">El Camino</div>
-                Year: 2019<br>
-                Director: Vince Gilligan<br>
-                Actors: Aaron Paul
-            </div>
-        </div>
 
-        <div class="list__title">
-            <img src="images/movies/john_wick_2.jpg" alt="John Wick 2">
-            <div class="list__title__rating">85%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">John Wick 2</div>
-                Year: 2017<br>
-                Director: Chad Stahelski<br>
-                Actors: Keanu Reeves
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">90%</div>
+                    <img src="images/movies/interstellar.webp" alt="Interstellar">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">Interstellar</div>
+                    Year: 2014<br>
+                    Director: Christopher Nolan<br>
+                    Actors: Anne Hathaway...
+                </div>
             </div>
-        </div>
 
-        <div class="list__title">
-            <img src="images/movies/john_wick_3.jpg" alt="John Wick 3">
-            <div class="list__title__rating">89%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">John Wick 3</div>
-                Year: 2019<br>
-                Director: Chad Stahelski<br>
-                Actors: Keanu Reeves
+        <a href="john_wick.html"><div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">99%</div>
+                    <img src="images/movies/john_wick.jpg" alt="John Wick">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">John Wick</div>
+                    Year: 2014<br>
+                    Director: Chad Stahelski<br>
+                    Actors: Keanu Reeves...
+                </div>
             </div>
-        </div>
+        </a>
 
-        <div class="list__title">
-            <img src="images/movies/john_wick_4.jpg" alt="John Wick 4">
-            <div class="list__title__rating">92%</div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">John Wick 4</div>
-                Year: 2023<br>
-                Director: Chad Stahelski<br>
-                Actors: Keanu Reeves
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">84%</div>
+                    <img src="images/movies/oppenheimer.jpg" alt="Oppenheimer">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">Oppenheimer</div>
+                    Year: 2023<br>
+                    Director: Christopher Nolan<br>
+                    Actors: Cillian Murphy...
+                </div>
             </div>
-        </div>
+
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">82%</div>
+                    <img src="images/movies/el_camino.jpg" alt="El Camino">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">El Camino</div>
+                    Year: 2019<br>
+                    Director: Vince Gilligan<br>
+                    Actors: Aaron Paul
+                </div>
+            </div>
+
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">85%</div>
+                    <img src="images/movies/john_wick_2.jpg" alt="John Wick 2">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">John Wick 2</div>
+                    Year: 2017<br>
+                    Director: Chad Stahelski<br>
+                    Actors: Keanu Reeves
+                </div>
+            </div>
+
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">89%</div>
+                    <img src="images/movies/john_wick_3.jpg" alt="John Wick 3">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">John Wick 3</div>
+                    Year: 2019<br>
+                    Director: Chad Stahelski<br>
+                    Actors: Keanu Reeves
+                </div>
+            </div>
+
+            <div class="list__title">
+                <div class="list__title__picture">
+                    <div class="list__title__rating">92%</div>
+                    <img src="images/movies/john_wick_4.jpg" alt="John Wick 4">
+                </div>
+                <div class="list__title__description">
+                    <div class="list__title__description__name">John Wick 4</div>
+                    Year: 2023<br>
+                    Director: Chad Stahelski<br>
+                    Actors: Keanu Reeves
+                </div>
+            </div>
 
     </div>
     <script>
         let images = Array.from(document.querySelector(".list").querySelectorAll("img"));
-        
+
         let min = images[0].clientWidth;
 
-        for (let i = 1; i < images.length; i++){
-            if (min > images[i].width){
+        for (let i = 1; i < images.length; i++) {
+            if (min > images[i].width) {
                 min = images[i].width;
             }
         }
