--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
 <body>
     <div class = "login">
         <form>
-            Username <input type = "text" name = "username" required><br><br>
-            Password <input type = "password" name = "password" required><br><br>
-            <input type = "button" onclick = "location.href = 'index.html'" name = "login" value = "Login">
+            <label for = "username">Username</label> <input type = "text" name = "username" id = "username" required>
+            <label for="password">password</label> <input type = "password" name = "password" id = "password" required>
+            <button type= "button" onclick = "location.href = 'index.html'" name = "login">Login</button>
         </form>
         Haven´t an acount? <a href = "registration.html">Sign in</a><br>
     </div>
