--- a/news.html
+++ b/news.html
@@ -72,9 +72,13 @@
                     <header>Stranger Things: The Final Countdown</header>
                     <section>With its fifth and final season, *Stranger Things* is pulling out all the stops. Expect emotional goodbyes, epic battles, and a new creature from the Upside Down more terrifying than ever before.</section>
                     <span id="news__article__release-date"> December 1st, 2024</span>
-                </article>
-                
+                </article>                
             </div>
+            <aside class="news__newsletter">
+                <form>
+                    
+                </form>
+            </aside>
         </main>
     </nav>
 </body>
